# agno_agent_os

./: .gitignore  README.md  pyproject.toml
scripts/: start_agno_UI.ps1
src/: main.py
src/agents/: MCPAgent.py  agent_generator.py  faq_agent.py  github_agent.py  ms_sql_agent.py
src/teams/: research_team.py
src/utils/: agent_instructions.py  config.py  logger.py  mlflow_tracer.py  sqlite_memory.py
tests/: test_agents.py  test_llm.py  test_ms_sql_server_conn.py
